# SaveMeMoney

./: .gitignore  README.md  m.cmd  manage.py  pyproject.toml  tests.py
.run/: create_fake_data 250 --delete.run.xml
expenses/: admin.py  api_views.py  forms.py  models.py  serializers.py  tests.py  urls.py  views.py
expenses/management/commands/: create_fake_data.py
expenses/migrations/: 0001_initial.py  0002_expense_created_at.py  0002_tag_expense_tags.py  0003_category_expense_category.py  0003_expense_is_starred.py
expenses/static/: main.css
expenses/static/js/: expense_list.js
expenses/templates/: base.html  demo.html
expenses/templates/expenses/: expense_confirm_delete.html  expense_detail.html  expense_form.html  expense_list.html
expenses/templates/registration/: login.html
savememoney/: asgi.py  settings.py  urls.py  wsgi.py
